<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Heading">About the Theme</string>
    <string name="About">Domi\'s Substratum Theme is an open source project. The theme includes some nice and colorful overlays for some popular apps as well as better dark modes and other neat things.\n</string>
    <string name="Substratum">Open Substratum</string>

    <string name="loading">Loading</string>

    <string name="glance_lite_title">At a glance lite</string>
    <string name="home_screen_title">Home screen</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_data_used">Data used</string>
    <string name="dashboard_available_storage">Available storage</string>
    <string name="dashboard_battery">Battery</string>
    <string name="dashboard_unavailable">-</string>

    <string name="request_phone_state">Request Phone State Permission</string>
    <string name="request_usage_stats">Request Usage Stats Permission</string>
</resources>